# openrecon-ios

./: .dockerignore  .gitignore  .npmrc  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  index.json  manifest.json  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: correlate.md  engagement.md  idor.md  report.md
.git-rewrite/: backup-refs  commit  parse  raw-refs  revs
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  improve-skill.md  new-skill-request.yml
.github/workflows/: ci.yml  dependency-smoke-check.yml  sync-marketplace-version.yml
.well-known/mcp/: server-card.json
agent/: __init__.py  cli.py  correlate.py  diff.py  endpoint_map.py  export.py  finder.py  finders_secrets.py  frida_flow_normalizer.py  hypotheses.py  install_mcp.py  llm.py  owasp_mapping.py  planner.py  query.py  replay.py  reporter.py  runner.py  runs.py  schema.py  state.py  steps.py  store.py
api/: __init__.py  auth.py  base.py  binary.py  graphql.py  idor.py  mass_assignment.py  static.py  tamper.py  token_analysis.py
docs/: architecture.md  bug-bounty-modules.md  frida-objection-integration.md  index.md  iorpl.md  mcp-integration.md  mcp.md  r2-integration.md  roadmap.md  vendor-patches.md  workflows.md
frida_layer/: __init__.py  auto_hook.py  runner.py
frida_layer/hooks/: _common.js  binary_dump.js  commoncrypto_tracer.js  jailbreak_bypass.js  keychain_dump.js  keychain_full_dump.js  ns_url_connection_tracer.js  nshttpcookiestorage_tracer.js  nsuserdefaults_tracer.js  ssl_pinning_bypass.js  url_session_body_tracer.js  url_session_tracer.js
iorpl/: __init__.py  ai_mutations.py  cli.py  format.py  mutations.py  record.py  replay.py  report.py  server.py  suite.py
iorpl/suites/: auth.yaml  full.yaml  idor.yaml  llm.yaml  mass_assignment.yaml  tamper.yaml
mappings/: attack-navigator-layer.json
mappings/mitre-attack/: coverage-summary.md
mappings/nist-csf/: csf-alignment.md
mappings/owasp/: README.md
mitm/: __init__.py  client.py
mitm/addons/: __init__.py  correlation_emitter.py  ios_filter.py
mitm/replay/: __init__.py  ios.py
objection_layer/: __init__.py  runner.py
objection_layer/scripts/: cookies_dump.objection  jailbreak_detection.objection  keychain_dump.objection  recon.objection  ssl_pinning_check.objection  userdefaults_dump.objection
r2_mcp/: __init__.py  server.py  session.py
r2frida_mcp/: __init__.py  server.py  session.py
skills/: README.md
skills/_upstream/anthropic-cybersecurity-skills/: README.md
skills/_upstream/anthropic-cybersecurity-skills/.github/ISSUE_TEMPLATE/: new-skill.md  skill-improvement.yml
skills/_upstream/anthropic-cybersecurity-skills/.github/workflows/: update-index.yml  validate-skills.yml
skills/_upstream/anthropic-cybersecurity-skills/mappings/: README.md
skills/_upstream/anthropic-cybersecurity-skills/mappings/mitre-attack/: README.md
skills/_upstream/anthropic-cybersecurity-skills/mappings/nist-csf/: README.md
skills/_upstream/anthropic-cybersecurity-skills/tools/: validate-skill.py
skills/analyzing-ios-app-security-with-objection/: SKILL.md
skills/ios-security-research/: SKILL.md
skills/reverse-engineering-ios-app-with-frida/: SKILL.md
src/mitmproxy_mcp/core/: generation.py  interceptor.py  scope.py  server.py
src/mitmproxy_mcp/templates/: aiohttp.jinja2  playwright.jinja2
src/mitmproxy_mcp/tests/: test_security_fix.py
templates/: engagement.example.yaml  finding.md.j2  finding.schema.json  report.md.j2
tests/: conftest.py  test_api_auth.py  test_api_mass_assignment.py  test_api_tamper_graphql_token.py  test_generate_scraper_code.py  test_get_flow_schema.py  test_list_tools.py  test_llm.py  test_mitm_integration.py  test_mitm_replay_ios.py  test_query.py  test_replay.py  test_reporter.py  test_schema.py  test_security_redos.py
tests/fixtures/: mitm_mcp_fixture_server.py  recorded_ios.har
tests/integration/: test_iorpl_replay.py  test_mitm_client.py  test_synthetic_replay.py
tests/modules/: test_auth.py  test_graphql.py  test_idor.py  test_mass_assignment.py  test_tamper.py  test_token_analysis.py
tests/orchestration/: test_finder.py  test_hypothesis_rules.py  test_llm.py  test_module_hypotheses.py  test_planner.py  test_planner_baselines.py  test_replay.py  test_reporter.py  test_test_hypothesis_step.py
tests/unit/: test_correlator.py  test_diff.py  test_endpoint_map.py  test_export.py  test_finders_secrets.py  test_frida_flow_normalizer.py  test_hypotheses.py  test_iorpl_ai_mutations.py  test_iorpl_format.py  test_iorpl_mutations.py  test_iorpl_report.py  test_iorpl_suite.py  test_owasp_mapping.py  test_r2_session.py  test_runs.py  test_schema.py  test_store.py
tools/: README.md
