[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mitmproxy-mcp"
version = "0.6.0"
description = "MITM proxy manager with MCP integration"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = {text = "MIT"}
authors = [{ name = "SnapSpecter", email = "snapspecter@outlook.com" }]
keywords = ["mitmproxy", "mcp", "proxy", "http", "debugging", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mitmproxy>=12.0.0",
    "curl-cffi>=0.14.0",
    "mcp>=1.25.0",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
    "uvicorn>=0.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "jsonpath-ng>=1.8.0",
    "beautifulsoup4>=4.14.3",
    "playwright>=1.58.0",
    "google-re2>=1.1",
]

[project.urls]
Homepage = "https://github.com/snapspecter/mitmproxy-mcp"
Repository = "https://github.com/snapspecter/mitmproxy-mcp"
Issues = "https://github.com/snapspecter/mitmproxy-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mitmproxy-mcp = "mitmproxy_mcp.core.server:start"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py310"
