[project]
name = "openrecon"
version = "0.1.0"
description = "Autonomous iOS security research platform fusing Frida, Objection, and MITMProxy MCP."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "xtofuub" }]

dependencies = [
    "pydantic>=2.6,<3",
    "structlog>=24.1,<26",
    "httpx>=0.27,<1",
    "anyio>=4.3,<5",
    "click>=8.1,<9",
    "PyYAML>=6.0,<7",
    "Jinja2>=3.1,<4",
    "aiofiles>=23.2,<25",
    "python-ulid>=2.2,<4",
    "PyJWT>=2.8,<3",
    # Range kept wide so operators can pin to whatever frida-server is on
    # their device. e.g. iOS 16.1.4 + frida-server 16.1.x:
    #   pip install -e . "frida==16.1.11" "frida-tools==12.4.2"
    "frida>=16,<18",
    "frida-tools>=12,<15",
    "objection>=1.11.0,<2",
    "mitmproxy>=12.0.0,<13",
    # Vendored mitmproxy-mcp transitive deps (mitm/vendor/src/mitmproxy_mcp).
    # Pinned here so `pip install -e .` brings them in; without them the
    # stdio subprocess exits at import time with "Connection closed".
    "google-re2>=1.1",
    "curl-cffi>=0.14.0",
    "jsonpath-ng>=1.8.0",
    "beautifulsoup4>=4.14.3",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx-sse>=0.4.0",
    "mcp>=1.2,<2",
    "rich>=13.7,<15",
    "jsonschema>=4.20,<5",
    "anthropic>=0.39,<1",
]

[project.optional-dependencies]
r2 = [
    "r2pipe>=1.9,<2",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "types-PyYAML>=6.0,<7",
]

[project.scripts]
openrecon = "agent.cli:main"
openrecon-install-mcp = "agent.install_mcp:main"
r2-mcp = "r2_mcp:main"
r2frida-mcp = "r2frida_mcp:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "api", "frida_layer", "objection_layer", "mitm", "r2_mcp", "r2frida_mcp"]

[tool.ruff]
line-length = 130
target-version = "py312"
extend-exclude = ["mitm/vendor", "skills/_upstream"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC", "S"]
ignore = [
    "S101",   # assert
    "S110",   # try-except-pass: intentional in best-effort decode paths
    "S112",   # try-except-continue: ditto
    "S603",   # subprocess call: required by objection_layer
    "S607",   # subprocess partial path: PATH lookup is fine for tools we shell out to
    "SIM102",   # nested if: prefer readable over collapsed
    "SIM103",   # condition return: prefer explicit
    "SIM105",   # contextlib.suppress: try-except-pass is fine
    "UP042",    # str+Enum: keep StrEnum migration optional
    "ASYNC240", # Path methods in async: acceptable for short CLI shims
]

[tool.ruff.lint.per-file-ignores]
# Tests and fixtures need broad latitude: long fixture data, try/except/pass
# for intentional skip paths, subprocess invocations in fake MCP servers.
"tests/**/*.py" = ["S110", "S112", "S603", "S607", "S108", "E501"]
"tests/fixtures/*.py" = ["S110", "S112", "S603", "S607", "S108", "E501", "F401"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["mitm/vendor/", "skills/_upstream/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
